tests/NormalTests/paczka1/fuzzy1/17993202.err
Error in line 1: dAzkN A66 26,0
Error in line 9: XrBDaqb3c S843 83,7
Error in line 14: XrBDaqb3c A66 32,0
Error in line 17: XrBDaqb3c A22 57,4
Error in line 38: xl63V19FxX A66 18,1
